--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -103,6 +103,9 @@
 						varying vec2 vUv;
 						void main(){
 							// gl_FragColor=vec4(.5,0,0,1);
+
+							// gl_FragColor=texture2D(map,vUv);return;
+
 							float depth=texture2D(map,vUv).r;
 							gl_FragColor=vec4(vec3(depth),1);
 						}
@@ -375,14 +378,15 @@
 
 			}
 
-			scene.traverse(child=>{
+			scene.children.forEach(child=>{
 				if(child===groundReflector) child.visible=false
 				else if(child===rtdebugger) child.visible=false
 				else child.visible=true
 			})
 			groundReflector.doRender( renderer, scene, camera );
-			scene.traverse(child=>{
-				child.visible=true
+			scene.children.forEach(child=>{
+				if(child===rtdebugger) child.visible=true
+				else child.visible=false
 			})
 
 			renderer.render( scene, camera );
