--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -238,7 +238,7 @@
 
 			} );
 			folder.add( ssrPass, 'isBouncing' );
-			ssrPass.output=SSRPass.OUTPUT.Metalness
+			// ssrPass.output=SSRPass.OUTPUT.Metalness
 			folder.add( ssrPass, 'output', {
 				'Default': SSRPass.OUTPUT.Default,
 				'SSR Only': SSRPass.OUTPUT.SSR,
