--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -33,7 +33,7 @@
 
 		const params = {
 			enableSSRr: true,
-			autoRotate: true,
+			autoRotate: false,
 		};
 		let composer;
 		let ssrrPass;
@@ -60,11 +60,13 @@
 		function init() {
 
 			camera = new THREE.PerspectiveCamera(35, window.innerWidth / window.innerHeight, 0.1, 15);
+			window.camera=camera
 			camera.position.set(0.13271600513224902, 0.3489546826045913, 0.43921296427927076);
+			camera.position.set(-0.36047348316699585, 0.020942353661799785, -0.40031694505946464);
 
 			scene = new THREE.Scene();
-			scene.background = new THREE.Color(0x443333);
-			scene.fog = new THREE.Fog(0x443333, 1, 4);
+			// scene.background = new THREE.Color(0x443333);
+			// scene.fog = new THREE.Fog(0x443333, 1, 4);
 
 			// Ground
 			let map=new THREE.TextureLoader().load('./textures/uv_grid_opengl.jpg')
