--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -215,6 +215,8 @@
 			});
 			ssrrPass.surfDist = 0.1;
 			folder.add( ssrrPass, 'surfDist' ).min( 0 ).max( .3 ).step( .001 );
+			ssrrPass.maxDistance = 15;
+			folder.add( ssrrPass, 'maxDistance' ).min( 0 ).max( 20 ).step( .001 )
 			folder.open()
 			// gui.close()
 
