--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -197,6 +197,8 @@
 				}
 
 			} );
+			ssrPass.surfDist = 0.0015;
+			gui.add( ssrPass, 'surfDist' ).min( 0 ).max( .1 ).step( .0001 );
 			gui.add( params, 'autoRotate' ).onChange( () => {
 
 				controls.enabled = ! params.autoRotate;
@@ -254,8 +256,6 @@
 				groundReflector.opacity = ssrPass.opacity;
 
 			} );
-			ssrPass.surfDist = 0.0015;
-			folder.add( ssrPass, 'surfDist' ).min( 0 ).max( .005 ).step( .0001 );
 			folder.add( ssrPass, 'infiniteThick' );
 			folder.add( ssrPass, 'blur' );
 			folder.open()
