--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -128,6 +128,15 @@
 			otherMeshes.push( mesh );
 			selects.push( mesh );
 
+			geometry = new THREE.CylinderGeometry( .025, .025, .05, 32 );
+			material = new THREE.MeshStandardMaterial( { color: 'red' } );
+			mesh = new THREE.Mesh( geometry, material );
+			mesh.position.set( - .05, .025, .105+.025 );
+			scene.add( mesh );
+			otherMeshes.push( mesh );
+			selects.push( mesh );
+			geometry.rotateZ(Math.PI/2)
+
 			geometry = new THREE.PlaneBufferGeometry( 1, 1 );
 			groundReflector = new ReflectorForSSRPass( geometry, {
 				clipBias: 0,
