--- a/examples/games_fps_test.html
+++ b/examples/games_fps_test.html
@@ -330,36 +330,36 @@
 
 			}
 
-			// const loader = new GLTFLoader().setPath( './models/gltf/' );
+			const loader = new GLTFLoader().setPath( './models/gltf/' );
 
-			// loader.load( 'collision-world.glb', ( gltf ) => {
+			loader.load( 'collision-world.glb', ( gltf ) => {
 
-			// 	scene.add( gltf.scene );
+				scene.add( gltf.scene );
 
-			// 	worldOctree.fromGraphNode( gltf.scene );
+				worldOctree.fromGraphNode( gltf.scene );
 
-			// 	gltf.scene.traverse( child => {
+				gltf.scene.traverse( child => {
 
-			// 		if ( child.isMesh ) {
+					if ( child.isMesh ) {
 
-			// 			child.castShadow = true;
-			// 			child.receiveShadow = true;
+						child.castShadow = true;
+						child.receiveShadow = true;
 
-			// 			if ( child.material.map ) {
+						if ( child.material.map ) {
 
-			// 				child.material.map.anisotropy = 8;
+							child.material.map.anisotropy = 8;
 
-			// 			}
+						}
 
-			// 		}
+					}
 
-			// 	} );
+				} );
 
-			// 	animate();
+				animate();
 
-			// } );
+			} );
 
-			{
+			if(0){// floor
 				const geometry=new THREE.PlaneGeometry(10,10)
 				const material=new THREE.MeshStandardMaterial({
 					// color:'red',
@@ -373,7 +373,7 @@
 				mesh.receiveShadow=true
 			}
 
-			{
+			if(0){// wall box
 				const geometry=new THREE.BoxGeometry(10,10,10)
 				const material=new THREE.MeshStandardMaterial({
 					// color:'red',
@@ -387,7 +387,7 @@
 				mesh.receiveShadow=true
 			}
 
-			{
+			{// small box
 				const geometry=new THREE.BoxGeometry()
 				const material=new THREE.MeshStandardMaterial({
 					// color:'blue',
@@ -395,8 +395,22 @@
 				})
 				const mesh=new THREE.Mesh(geometry,material)
 				scene.add(mesh)
-				mesh.position.y=-1
-				mesh.position.z=-5
+				mesh.position.y=-0
+				mesh.position.z=-12.5
+				mesh.castShadow=true
+				mesh.receiveShadow=true
+			}
+
+			{// small box
+				const geometry=new THREE.BoxGeometry()
+				const material=new THREE.MeshStandardMaterial({
+					// color:'blue',
+					// side:THREE.DoubleSide,
+				})
+				const mesh=new THREE.Mesh(geometry,material)
+				scene.add(mesh)
+				mesh.position.y=-0
+				mesh.position.z=18.2
 				mesh.castShadow=true
 				mesh.receiveShadow=true
 			}
