--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -109,15 +109,15 @@
 			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
 			material = new THREE.MeshStandardMaterial( { color: 'green' } );
 			mesh = new THREE.Mesh( geometry, material );
-			mesh.position.set( - .12, .025, .015 );
+			mesh.position.set( - .12, .025+.01, .015 );
 			scene.add( mesh );
 			otherMeshes.push( mesh );
 			selects.push( mesh );
 
-			geometry = new THREE.BoxBufferGeometry( .5, .5, .1 );
+			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
 			material = new THREE.MeshStandardMaterial( { color: 'green' } );
 			mesh = new THREE.Mesh( geometry, material );
-			mesh.position.set( 1.9, .025, .2 );
+			mesh.position.set( 1.9, .025+.01, .2 );
 			scene.add( mesh );
 			otherMeshes.push( mesh );
 			selects.push( mesh );
@@ -133,7 +133,7 @@
 			geometry = new THREE.ConeBufferGeometry( .025, .05, 64 );
 			material = new THREE.MeshStandardMaterial( { color: 'yellow' } );
 			mesh = new THREE.Mesh( geometry, material );
-			mesh.position.set( - .05, .025, - .055 );
+			mesh.position.set( - .05, .025+.01, - .055 );
 			scene.add( mesh );
 			otherMeshes.push( mesh );
 			selects.push( mesh );
@@ -209,10 +209,12 @@
 			} );
 			// ssrPass.thickness = 0.0015;
 			// ssrPass.thickness = 0.03;
-			ssrPass.thickness = 0.0003;
-			gui.add( ssrPass, 'thickness' ).min( 0 ).max( .01 ).step( .00001 );
-			ssrPass.minThicknessBias = 3;
-			gui.add( ssrPass, 'minThicknessBias' ).min( 0 ).max( 10 ).step( .01 );
+			// ssrPass.thickness = 0.0003;
+			ssrPass.thickness = 0;
+			gui.add( ssrPass, 'thickness' ).min( 0 ).max( .02 ).step( .00001 );
+			// ssrPass.minThicknessBias = 3;
+			ssrPass.minThicknessBias = 0;
+			gui.add( ssrPass, 'minThicknessBias' ).min( 0 ).max( 100 ).step( .01 );
 			ssrPass.infiniteThick = false
 			gui.add( ssrPass, 'infiniteThick' );
 			gui.add( params, 'autoRotate' ).onChange( () => {
