--- a/examples/webgl_postprocessing_ssrr.html
+++ b/examples/webgl_postprocessing_ssrr.html
@@ -106,6 +106,8 @@
 				const mesh = new THREE.Mesh(geometry, material);
 				mesh.position.y = - 0.0365;
 				mesh.position.set(-.12,.01,.015)
+				mesh.position.set(-.045,.002,.08)
+				mesh.position.set(-.045,-.005,-.055)
 				mesh.scale.setScalar(.2)
 				mesh.name='bunny'
 				scene.add(mesh);
