--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -28,6 +28,7 @@
 		import { EffectComposer } from './jsm/postprocessing/EffectComposer.js';
 		import { SSRPass } from './jsm/postprocessing/SSRPass.js';
 		import { ReflectorForSSRPass } from './jsm/objects/ReflectorForSSRPass.js';
+		import { RGBELoader } from './jsm/loaders/RGBELoader.js';
 
 		import { DRACOLoader } from './jsm/loaders/DRACOLoader.js';
 
@@ -64,8 +65,7 @@
 
 			scene = new THREE.Scene();
 			window.scene=scene
-			scene.background = new THREE.Color( 0x443333 );
-			scene.fog = new THREE.Fog( 0x443333, 1, 4 );
+			// scene.fog = new THREE.Fog( 0x443333, 1, 4 );
 
 			// Ground
 			const plane = new THREE.Mesh(
@@ -76,7 +76,7 @@
 			plane.position.y = - 0.0001;
 			// plane.receiveShadow = true;
 			scene.add( plane );
-			selects.push(plane)
+			// selects.push(plane)
 
 			// Lights
 			const hemiLight = new THREE.HemisphereLight( 0x443333, 0x111122 );
@@ -94,7 +94,7 @@
 
 					geometry.computeVertexNormals();
 
-					const material = new THREE.MeshStandardMaterial( { metalness: 0.9, color: 0x606060 } );
+					const material = new THREE.MeshStandardMaterial( { metalness: 1, roughness:.5, color: 0x606060 } );
 					const mesh = new THREE.Mesh( geometry, material );
 					mesh.position.y = - 0.0365;
 					scene.add( mesh );
@@ -111,7 +111,7 @@
 			let geometry, material, mesh;
 
 			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
-			material = new THREE.MeshStandardMaterial( { metalness: .6, color: 'green' } );
+			material = new THREE.MeshStandardMaterial( { metalness: 1, roughness:.5, color: 'green' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .12, .025, .015 );
 			scene.add( mesh );
@@ -120,7 +120,7 @@
 			cube=mesh
 
 			geometry = new THREE.IcosahedronBufferGeometry( .025, 4 );
-			material = new THREE.MeshStandardMaterial( { metalness: .3, color: 'cyan' } );
+			material = new THREE.MeshStandardMaterial( { metalness: 1, roughness:.5, color: 'cyan' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .05, .025, .08 );
 			scene.add( mesh );
@@ -129,7 +129,7 @@
 			sphere=mesh
 
 			geometry = new THREE.ConeBufferGeometry( .025, .05, 64 );
-			material = new THREE.MeshStandardMaterial( { metalness: .1, color: 'yellow' } );
+			material = new THREE.MeshStandardMaterial( { metalness: 1, roughness:.5, color: 'yellow' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .05, .025, - .055 );
 			scene.add( mesh );
@@ -155,6 +155,32 @@
 			renderer.setSize( window.innerWidth, window.innerHeight );
 			renderer.outputEncoding = THREE.sRGBEncoding;
 			container.appendChild( renderer.domElement );
+			// scene.background = new THREE.Color( 0x443333 );
+			// new THREE.TextureLoader().load('textures/equirectangular/venice_sunset_1k.hdr', envMap=>{
+			// 	scene.background=envMap
+			// })
+			
+
+			const pmremGenerator = new THREE.PMREMGenerator( renderer );
+			pmremGenerator.compileEquirectangularShader();
+			new RGBELoader()
+					.setDataType( THREE.UnsignedByteType )
+					.setPath( 'textures/equirectangular/' )
+					.load( 'venice_sunset_1k.hdr', function ( texture ) {
+
+						let envMap = pmremGenerator.fromEquirectangular( texture ).texture;
+						pmremGenerator.dispose();
+
+						scene.background = envMap;
+						scene.environment = envMap;
+
+						//
+
+						// buildGUI();
+						// initScene( scenes[ state.scene ] );
+						// animate();
+
+					} );
 
 			//
 
@@ -229,13 +255,13 @@
 
 			} );
 			gui.add(bunny.material,'metalness').name('bunny metalness').min(0).max(1)
-			gui.add(bunny.material,'roughness').name('bunny roughness').min(0).max(1)
+			// gui.add(bunny.material,'roughness').name('bunny roughness').min(0).max(1)
 			gui.add(cube.material,'metalness').name('cube metalness').min(0).max(1)
-			gui.add(cube.material,'roughness').name('cube roughness').min(0).max(1)
+			// // gui.add(cube.material,'roughness').name('cube roughness').min(0).max(1)
 			gui.add(sphere.material,'metalness').name('sphere metalness').min(0).max(1)
-			gui.add(sphere.material,'roughness').name('sphere roughness').min(0).max(1)
+			// // gui.add(sphere.material,'roughness').name('sphere roughness').min(0).max(1)
 			gui.add(cone.material,'metalness').name('cone metalness').min(0).max(1)
-			gui.add(cone.material,'roughness').name('cone roughness').min(0).max(1)
+			// // gui.add(cone.material,'roughness').name('cone roughness').min(0).max(1)
 
 			const folder = gui.addFolder( 'more settings' );
 			folder.add( ssrPass, 'fresnel' ).onChange( ()=>{
