--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -110,23 +110,26 @@
 			})
 
 			let geometry, material, mesh;
+			let group=new THREE.Group()
+			scene.add(group)
+			selects.push(group)
 
 			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
 			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness:.5, color: 'green' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .12, .025, .015 );
-			scene.add( mesh );
+			group.add( mesh );
 			otherMeshes.push( mesh );
-			selects.push( mesh );
+			// selects.push( mesh );
 			cube=mesh
 
 			geometry = new THREE.IcosahedronBufferGeometry( .025, 4 );
 			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness:.5, color: 'cyan' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .05, .025, .08 );
-			scene.add( mesh );
+			group.add( mesh );
 			otherMeshes.push( mesh );
-			selects.push( mesh );
+			// selects.push( mesh );
 			sphere=mesh
 
 			geometry = new THREE.ConeBufferGeometry( .025, .05, 64 );
@@ -261,6 +264,7 @@
 			folder.add(bunny.material,'metalness').name('bunny metalness').min(0).max(1)
 			folder.add(bunny.material,'roughness').name('bunny roughness').min(0).max(1)
 			folder=gui.addFolder('cube')
+			folder.open()
 			folder.add(cube.material,'reflectivity').name('ssr & reflectivity').min(0).max(1)
 			folder.add(cube.material,'envMapIntensity').name('envMapIntensity').min(0).max(1)
 			folder.add(cube.material,'metalness').name('cube metalness').min(0).max(1)
