--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -47,6 +47,7 @@
 		const otherMeshes = [];
 		let groundReflector;
 		const selects = [];
+		window.selects=selects
 		let bunny, cube, sphere, cone;
 		let folder
 
@@ -78,6 +79,7 @@
 			// plane.receiveShadow = true;
 			scene.add( plane );
 			selects.push(plane)
+			plane.name='plane'
 
 			// Lights
 			const hemiLight = new THREE.HemisphereLight( 0x443333, 0x111122 );
@@ -101,6 +103,7 @@
 					scene.add( mesh );
 					selects.push( mesh );
 					bunny=mesh
+					mesh.name='bunny'
 
 					// Release decoder resources.
 					dracoLoader.dispose();
@@ -113,6 +116,7 @@
 			let group=new THREE.Group()
 			scene.add(group)
 			selects.push(group)
+			group.name='group'
 
 			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
 			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness:.5, color: 'green' } );
@@ -122,6 +126,7 @@
 			otherMeshes.push( mesh );
 			// selects.push( mesh );
 			cube=mesh
+			mesh.name='cube'
 
 			geometry = new THREE.IcosahedronBufferGeometry( .025, 4 );
 			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness:.5, color: 'cyan' } );
@@ -131,6 +136,7 @@
 			otherMeshes.push( mesh );
 			// selects.push( mesh );
 			sphere=mesh
+			mesh.name='sphere'
 
 			geometry = new THREE.ConeBufferGeometry( .025, .05, 64 );
 			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness:.5, color: 'yellow' } );
@@ -140,6 +146,7 @@
 			otherMeshes.push( mesh );
 			selects.push( mesh );
 			cone=mesh
+			mesh.name='cone'
 
 			geometry = new THREE.PlaneBufferGeometry( 1, 1 );
 			groundReflector = new ReflectorForSSRPass( geometry, {
@@ -153,6 +160,7 @@
 			groundReflector.rotation.x = - Math.PI / 2;
 			groundReflector.visible = false;
 			scene.add( groundReflector );
+			groundReflector.name='groundReflector'
 
 			// renderer
 			renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -215,6 +223,7 @@
 				// selects: params.groundReflector ? selects : null
 				selects,
 			} );
+			window.ssrPass=ssrPass
 
 			composer.addPass( ssrPass );
 
@@ -270,11 +279,13 @@
 			folder.add(cube.material,'metalness').name('cube metalness').min(0).max(1)
 			folder.add(cube.material,'roughness').name('cube roughness').min(0).max(1)
 			folder=gui.addFolder('sphere')
+			folder.open()
 			folder.add(sphere.material,'reflectivity').name('ssr & reflectivity').min(0).max(1)
 			folder.add(sphere.material,'envMapIntensity').name('envMapIntensity').min(0).max(1)
 			folder.add(sphere.material,'metalness').name('sphere metalness').min(0).max(1)
 			folder.add(sphere.material,'roughness').name('sphere roughness').min(0).max(1)
 			folder=gui.addFolder('cone')
+			folder.open()
 			folder.add(cone.material,'reflectivity').name('ssr & reflectivity').min(0).max(1)
 			folder.add(cone.material,'envMapIntensity').name('envMapIntensity').min(0).max(1)
 			folder.add(cone.material,'metalness').name('cone metalness').min(0).max(1)
