--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -18,7 +18,8 @@
 	</div>
 
 	<script type="module">
-		import * as THREE from '../build/three.module.js';
+		// import * as THREE from '../build/three.module.js';
+		import * as THREE from '../src/Three.js';
 
 		import Stats from './jsm/libs/stats.module.js';
 
