--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -261,7 +261,7 @@
 				controls.enabled = ! params.autoRotate;
 
 			} );
-			ssrPass.output=SSRPass.OUTPUT.Metalness
+			// ssrPass.output=SSRPass.OUTPUT.Metalness
 			gui.add( ssrPass, 'output', {
 				'Default': SSRPass.OUTPUT.Default,
 				'SSR Only': SSRPass.OUTPUT.SSR,
@@ -331,18 +331,6 @@
 
 			} );
 			folder.add( ssrPass, 'bouncing' );
-			folder.add( ssrPass, 'output', {
-				'Default': SSRPass.OUTPUT.Default,
-				'SSR Only': SSRPass.OUTPUT.SSR,
-				'Beauty': SSRPass.OUTPUT.Beauty,
-				'Depth': SSRPass.OUTPUT.Depth,
-				'Normal': SSRPass.OUTPUT.Normal,
-				'Metalness': SSRPass.OUTPUT.Metalness,
-			} ).onChange( function ( value ) {
-
-				ssrPass.output = parseInt( value );
-
-			} );
 			folder.add(bunny.material,'metalness').name('bunny metalness').min(0).max(1)
 			folder.add(cube.material,'metalness').name('cube metalness').min(0).max(1)
 			folder.add(sphere.material,'metalness').name('sphere metalness').min(0).max(1)
