--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -81,6 +81,7 @@
 			scene.add( groundPlane );
 			selects.push(groundPlane)
 			groundPlane.name='groundPlane'
+			window.groundPlane=groundPlane
 
 			// Lights
 			const hemiLight = new THREE.HemisphereLight( 0x443333, 0x111122 );
@@ -133,7 +134,7 @@
 			window.cube=cube
 
 			geometry = new THREE.IcosahedronBufferGeometry( .025, 4 );
-			material = new THREE.MeshStandardMaterial( { metalness: .5, roughness:.5, color: 'cyan' } );
+			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness:.5, color: 'cyan' } );
 			mesh = new THREE.Mesh( geometry, material );
 			mesh.position.set( - .05, .025, .08 );
 			group.add( mesh );
@@ -238,7 +239,7 @@
 
 			// GUI
 
-			gui = new GUI( { width: 260 } );
+			gui = new GUI( { width: 320 } );
 			gui.add( params, 'enableSSR' ).name( 'Enable SSR' );
 			// gui.add( params, 'groundReflector' ).onChange( () => {
 
@@ -275,30 +276,31 @@
 				ssrPass.output = parseInt( value );
 
 			} );
+			gui.add(ssrPass,'defaultIntensity').min(0).max(1)
 			folder=gui.addFolder('bunny')
 			folder.open()
-			// folder.add(bunny.material,'reflectivity').name('ssr & reflectivity').min(0).max(1)
-			folder.add(bunny.material,'envMapIntensity').name('envMapIntensity').min(0).max(1)
-			folder.add(bunny.material,'metalness').name('bunny metalness').min(0).max(1)
-			folder.add(bunny.material,'roughness').name('bunny roughness').min(0).max(1)
+			// folder.add(bunny.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
+			folder.add(bunny.material,'envMapIntensity').name('ssr&envMapIntensity').min(0).max(1)
+			folder.add(bunny.material,'metalness').name('bunnyMetalness').min(0).max(1)
+			folder.add(bunny.material,'roughness').name('bunnyRoughness').min(0).max(1)
 			folder=gui.addFolder('cube')
 			folder.open()
-			// // folder.add(cube.material,'reflectivity').name('ssr & reflectivity').min(0).max(1)
-			folder.add(cube.material,'envMapIntensity').name('envMapIntensity').min(0).max(1)
-			folder.add(cube.material,'metalness').name('cube metalness').min(0).max(1)
-			folder.add(cube.material,'roughness').name('cube roughness').min(0).max(1)
+			// // folder.add(cube.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
+			folder.add(cube.material,'envMapIntensity').name('ssr&envMapIntensity').min(0).max(1)
+			folder.add(cube.material,'metalness').name('cubeMetalness').min(0).max(1)
+			folder.add(cube.material,'roughness').name('cubeRoughness').min(0).max(1)
 			folder=gui.addFolder('sphere')
 			folder.open()
-			// // folder.add(sphere.material,'reflectivity').name('ssr & reflectivity').min(0).max(1)
-			folder.add(sphere.material,'envMapIntensity').name('envMapIntensity').min(0).max(1)
-			folder.add(sphere.material,'metalness').name('sphere metalness').min(0).max(1)
-			folder.add(sphere.material,'roughness').name('sphere roughness').min(0).max(1)
+			// // folder.add(sphere.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
+			folder.add(sphere.material,'envMapIntensity').name('ssr&envMapIntensity').min(0).max(1)
+			folder.add(sphere.material,'metalness').name('sphereMetalness').min(0).max(1)
+			folder.add(sphere.material,'roughness').name('sphereRoughness').min(0).max(1)
 			folder=gui.addFolder('cone')
 			folder.open()
-			// // folder.add(cone.material,'reflectivity').name('ssr & reflectivity').min(0).max(1)
-			folder.add(cone.material,'envMapIntensity').name('envMapIntensity').min(0).max(1)
-			folder.add(cone.material,'metalness').name('cone metalness').min(0).max(1)
-			folder.add(cone.material,'roughness').name('cone roughness').min(0).max(1)
+			// // folder.add(cone.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
+			folder.add(cone.material,'envMapIntensity').name('ssr&envMapIntensity').min(0).max(1)
+			folder.add(cone.material,'metalness').name('coneMetalness').min(0).max(1)
+			folder.add(cone.material,'roughness').name('coneRoughness').min(0).max(1)
 
 			folder = gui.addFolder( 'more settings' );
 			folder.add( ssrPass, 'fresnel' ).onChange( ()=>{
@@ -332,10 +334,6 @@
 
 			} );
 			folder.add( ssrPass, 'bouncing' );
-			folder.add(bunny.material,'metalness').name('bunny metalness').min(0).max(1)
-			folder.add(cube.material,'metalness').name('cube metalness').min(0).max(1)
-			folder.add(sphere.material,'metalness').name('sphere metalness').min(0).max(1)
-			folder.add(cone.material,'metalness').name('cone metalness').min(0).max(1)
 			ssrPass.opacity = 1;
 			groundReflector.opacity = ssrPass.opacity;
 			folder.add( ssrPass, 'opacity' ).min( 0 ).max( 1 ).onChange( ()=>{
