--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -100,7 +100,7 @@
 
 					geometry.computeVertexNormals();
 
-					const material = new THREE.MeshStandardMaterial( { metalness: .5, roughness: .5, color: 0x606060 } );
+					const material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness: .5, color: 0x606060 } );
 					const mesh = new THREE.Mesh( geometry, material );
 					mesh.position.y = - 0.0365;
 					scene.add( mesh );
@@ -125,17 +125,6 @@
 			selects.push( group );
 			group.name = 'group';
 
-			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
-			material = new THREE.MeshStandardMaterial( { metalness: .5, roughness: .5, color: 'green' } );
-			mesh = new THREE.Mesh( geometry, material );
-			mesh.position.set( - .12, .025, .015 );
-			group.add( mesh );
-			// otherMeshes.push( mesh );
-			// selects.push( mesh );
-			cube = mesh;
-			mesh.name = 'cube';
-			window.cube = cube;
-
 			geometry = new THREE.IcosahedronBufferGeometry( .025, 4 );
 			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness: .5, color: 'cyan' } );
 			mesh = new THREE.Mesh( geometry, material );
@@ -146,6 +135,18 @@
 			sphere = mesh;
 			mesh.name = 'sphere';
 			window.sphere = sphere;
+
+			geometry = new THREE.BoxBufferGeometry( .05, .05, .05 );
+			// geometry = new THREE.IcosahedronBufferGeometry( .025, 4 );
+			material = new THREE.MeshPhysicalMaterial( { metalness: .5, roughness: .5, color: 'green' } );
+			mesh = new THREE.Mesh( geometry, material );
+			mesh.position.set( - .12, .025, .015 );
+			group.add( mesh );
+			// otherMeshes.push( mesh );
+			// selects.push( mesh );
+			cube = mesh;
+			mesh.name = 'cube';
+			window.cube = cube;
 
 			geometry = new THREE.ConeBufferGeometry( .025, .05, 64 );
 			material = new THREE.MeshStandardMaterial( { metalness: .5, roughness: .5, color: 'yellow' } );
@@ -279,30 +280,34 @@
 
 			} );
 			gui.add( ssrPass, 'defaultIntensity' ).min( 0 ).max( 1 );
-			folder = gui.addFolder( 'bunny' );
+
+			folder = gui.addFolder( 'bunny'+' '+bunny.material.type );
 			folder.open();
-			// folder.add(bunny.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
-			folder.add( bunny.material, 'envMapIntensity' ).name( 'ssr&envMapIntensity' ).min( 0 ).max( 1 );
+			if(bunny.material.type==='MeshPhysicalMaterial') folder.add(bunny.material,'reflectivity').name('reflectivity').min(0).max(1)
 			folder.add( bunny.material, 'metalness' ).name( 'bunnyMetalness' ).min( 0 ).max( 1 );
 			folder.add( bunny.material, 'roughness' ).name( 'bunnyRoughness' ).min( 0 ).max( 1 );
-			folder = gui.addFolder( 'cube' );
+			folder.add( bunny.material, 'envMapIntensity' ).name( 'envMapIntensity' ).min( 0 ).max( 1 );
+
+			folder = gui.addFolder( 'sphere'+' '+sphere.material.type );
 			folder.open();
-			// // folder.add(cube.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
-			folder.add( cube.material, 'envMapIntensity' ).name( 'ssr&envMapIntensity' ).min( 0 ).max( 1 );
-			folder.add( cube.material, 'metalness' ).name( 'cubeMetalness' ).min( 0 ).max( 1 );
-			folder.add( cube.material, 'roughness' ).name( 'cubeRoughness' ).min( 0 ).max( 1 );
-			folder = gui.addFolder( 'sphere' );
-			folder.open();
-			// // folder.add(sphere.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
-			folder.add( sphere.material, 'envMapIntensity' ).name( 'ssr&envMapIntensity' ).min( 0 ).max( 1 );
+			if(sphere.material.type==='MeshPhysicalMaterial') folder.add(sphere.material,'reflectivity').name('reflectivity').min(0).max(1)
 			folder.add( sphere.material, 'metalness' ).name( 'sphereMetalness' ).min( 0 ).max( 1 );
 			folder.add( sphere.material, 'roughness' ).name( 'sphereRoughness' ).min( 0 ).max( 1 );
-			folder = gui.addFolder( 'cone' );
+			folder.add( sphere.material, 'envMapIntensity' ).name( 'envMapIntensity' ).min( 0 ).max( 1 );
+
+			folder = gui.addFolder( 'cube'+' '+cube.material.type );
 			folder.open();
-			// // folder.add(cone.material,'reflectivity').name('ssr&reflectivity').min(0).max(1)
-			folder.add( cone.material, 'envMapIntensity' ).name( 'ssr&envMapIntensity' ).min( 0 ).max( 1 );
+			if(cube.material.type==='MeshPhysicalMaterial') folder.add(cube.material,'reflectivity').name('reflectivity').min(0).max(1)
+			folder.add( cube.material, 'metalness' ).name( 'cubeMetalness' ).min( 0 ).max( 1 );
+			folder.add( cube.material, 'roughness' ).name( 'cubeRoughness' ).min( 0 ).max( 1 );
+			folder.add( cube.material, 'envMapIntensity' ).name( 'envMapIntensity' ).min( 0 ).max( 1 );
+
+			folder = gui.addFolder( 'cone'+' '+cone.material.type );
+			folder.open();
+			if(cone.material.type==='MeshPhysicalMaterial') folder.add(cone.material,'reflectivity').name('reflectivity').min(0).max(1)
 			folder.add( cone.material, 'metalness' ).name( 'coneMetalness' ).min( 0 ).max( 1 );
 			folder.add( cone.material, 'roughness' ).name( 'coneRoughness' ).min( 0 ).max( 1 );
+			folder.add( cone.material, 'envMapIntensity' ).name( 'envMapIntensity' ).min( 0 ).max( 1 );
 
 			folder = gui.addFolder( 'more settings' );
 			folder.add( ssrPass, 'fresnel' ).onChange( ()=>{
