--- a/examples/pbr_learnopengl.com.html
+++ b/examples/pbr_learnopengl.com.html
@@ -137,8 +137,12 @@
 								// calculate reflectance at normal incidence; if dia-electric (like plastic) use F0 
 								// of 0.04 and if it's a metal, use the albedo color as F0 (metallic workflow)    
 								// vec3 F0 = vec3(0.04); 
-								vec3 F0 = vec3( 0.16 * ( reflectivity * reflectivity ) ); 
-								F0 = mix(F0, albedo, metallic);
+								float specularCoefficient = 0.16; // https://github.com/mrdoob/three.js/blob/9bbd837deb3e1d43d5c6c7054211eda5864bea06/src/renderers/shaders/ShaderChunk/lights_physical_pars_fragment.glsl.js#L18
+								vec3 F0 = vec3( specularCoefficient * ( reflectivity * reflectivity ) );
+								F0 = mix(F0, albedo, metallic); 
+								// F0 = specularColor in three.js 
+								// https://github.com/mrdoob/three.js/blob/9bbd837deb3e1d43d5c6c7054211eda5864bea06/src/renderers/shaders/ShaderChunk/lights_physical_fragment.glsl.js#L14
+								// https://github.com/mrdoob/three.js/blob/5a6df635c32071bec92df393f85c0d72ba34b560/src/renderers/shaders/ShaderChunk/lights_physical_fragment.glsl#L4
 
 								// reflectance equation
 								vec3 Lo = vec3(0.0);
