--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -274,6 +274,7 @@
 				'Depth': SSRPass.OUTPUT.Depth,
 				'Normal': SSRPass.OUTPUT.Normal,
 				'Metalness': SSRPass.OUTPUT.Metalness,
+				'Roughness': SSRPass.OUTPUT.Roughness,
 			} ).onChange( function ( value ) {
 
 				ssrPass.output = parseInt( value );
