--- a/examples/webgl_postprocessing_ssr.html
+++ b/examples/webgl_postprocessing_ssr.html
@@ -72,7 +72,7 @@
 
 			// Ground
 			const groundPlane = new THREE.Mesh(
-				new THREE.PlaneGeometry( 8, 8 ),
+				new THREE.PlaneGeometry( 1, 1 ),
 				new THREE.MeshPhongMaterial( { color: 0x999999, specular: 0x101010 } )
 			);
 			groundPlane.rotation.x = - Math.PI / 2;
@@ -288,8 +288,8 @@
 			folder.add( bunny.material, 'metalness' ).name( 'bunnyMetalness' ).min( 0 ).max( 1 );
 			folder.add( bunny.material, 'roughness' ).name( 'bunnyRoughness' ).min( 0 ).max( 1 );
 			folder.add( bunny.material, 'envMapIntensity' ).name( 'envMapIntensity' ).min( 0 ).max( 1 );
-			bunny.material.metalness=1
-			bunny.material.envMapIntensity=0
+			// bunny.material.metalness=1
+			// bunny.material.envMapIntensity=0
 
 			folder = gui.addFolder( 'sphere'+' '+sphere.material.type );
 			folder.open();
