--- a/examples/webgl_materials_cubemap_dynamic_pbr.html
+++ b/examples/webgl_materials_cubemap_dynamic_pbr.html
@@ -24,7 +24,6 @@
 			const gui=new GUI()
 			const stats = new Stats();
 			document.body.appendChild( stats.domElement );
-
 			let camera, scene, renderer;
 			let cube, sphere, torus, material;
 
@@ -82,11 +81,15 @@
 
 				//
 
-				material = new THREE.MeshBasicMaterial( {
+				material = new THREE.MeshStandardMaterial( {
 					envMap: cubeRenderTarget2.texture,
-					combine: THREE.MultiplyOperation,
-					reflectivity: 1
+					// combine: THREE.MultiplyOperation,
+					// reflectivity: 1,
+					metalness:1,
+					roughness:.2,
 				} );
+				gui.add(material,'metalness').min(0).max(1)
+				gui.add(material,'roughness').min(0).max(1)
 
 				sphere = new THREE.Mesh( new THREE.IcosahedronGeometry( 20, 8 ), material );
 				scene.add( sphere );
@@ -97,10 +100,13 @@
 				torus = new THREE.Mesh( new THREE.TorusKnotGeometry( 10, 5, 128, 16 ), material );
 				scene.add( torus );
 
+				const light = new THREE.AmbientLight( 0x404040 ); // soft white light
+				scene.add( light );
+
 				//
 
-				document.addEventListener( 'pointerdown', onPointerDown );
-				document.addEventListener( 'wheel', onDocumentMouseWheel );
+				renderer.domElement.addEventListener( 'pointerdown', onPointerDown );
+				renderer.domElement.addEventListener( 'wheel', onDocumentMouseWheel );
 
 				window.addEventListener( 'resize', onWindowResized );
 
@@ -117,7 +123,7 @@
 
 			function onPointerDown( event ) {
 
-				event.preventDefault();
+				// event.preventDefault();
 
 				onPointerDownPointerX = event.clientX;
 				onPointerDownPointerY = event.clientY;
